# Antarctica

./: .gitignore  README.md  push.bat
Alg_DataSt/Dynamic Connectivity/: 1_quick_union.c  2_weighted_quick_union.c  3_union_find.c  Dynamic_Connectivity.md
Alg_DataSt/KMP/: kmp.md  strStr.cpp
Alg_DataSt/List/: .0_single_linked_list.c.swp  0_single_linked_list (copy).c  0_single_linked_list.c  List.md
Alg_DataSt/Sort/: quick_sort_0.c  selection_sort.c
Alg_DataSt/数论_数学/: 最大公约数.cpp  高速求幂_分治.cpp
Alg_DataSt/最大子序列和/: 0_BruteForce.cpp  1_Devide-and-Conquer.cpp  2_O(n).cpp  最大子序列和.md
C/: Hello_World.c  _test - 副本.c  _test.bat  _test.c  _test.sh
C#/QQ截图工具_c#_vs2015_wkl改/QQ截图工具/: QQ截图工具.sln
C#/SP12T上位机/: GPIO_cl.txt  SP12T.sln
C#/SP12T上位机/SP12T/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  SP12T.csproj  SP12T_TemporaryKey.pfx
C#/paper_copytool/: paper_copytool.sln
C#/paper_copytool/paper_copytool/: Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  paper_copytool.csproj  paper_copytool_TemporaryKey.pfx
C++/: _test.bat  _test.cpp  test.sh
C++/NanoPlatform/: _test.cpp
C++/NanoSimulation/: build.sh  main.cpp  simulation.cpp
C++/NanoSimulation/include/: basedfunc.h  coeffi.h  simulation.h
C++/OpenCV/: Install_Note.md
C++/Qt/1st_proj_login/: adm_zhuce_dialog.cpp  adm_zhuce_dialog.h  adm_zhuce_dialog.ui  admwidget.cpp  admwidget.h  admwidget.ui  class_add.cpp  class_add.h  class_add.ui  class_choose.cpp  class_choose.h  class_choose.ui  class_show.cpp  class_show.h  class_show.ui  login.pro  loginwidget.cpp  loginwidget.h  loginwidget.ui  main.cpp  student.h  stuwidget.cpp  stuwidget.h  stuwidget.ui  teacher.h  teawidget.cpp  teawidget.h  teawidget.ui  total.cpp  total.h  zhucedialog.cpp  (+2 more)
C++/UE4/: UE4入门.md  开课典礼.md
C++/note/: ppt_note.md
C/Make_gcc/: gcc g++ 编译选项_个人常用.md
C/Somes/: pthread_test.c
C/Tcp_Ip_SDK/: .tags  .tags_sorted_by_file  Makefile  del.sh
C/note/: C_Primer_note.md  Linux_pthread.md  note.md  随记.md  随记.txt
JavaScript/usetc_mapp/: app.js  app.json  app.ttss  mapp.bat  project.config.json  work.md  日志.md
LaTex/EMBC_paper/: Paper_0.aux  Paper_0.bbl  Paper_0.blg  Paper_0.tex  refe.bib
Linux/: Docker_0.md  Linux 内核代码随记.md  Linux 命令_Server.md  Linux_命令.md  Linux_问题（杂）.md  Shell.md  vim.md  服务器配置记录.md  鸟哥笔记.md
Linux/Make_gcc/: Makefile_个人常用.md  Makefile_基础.md  gcc g++ 编译选项_个人常用.md
Linux/服务器/: Note.md  问题(杂).md
Matlab/: 血管分形matlab代码.rar
Matlab/EMBC_paper_src/: SNR.m  lqr_test.m  main.m  main_old.m  save_note.txt  sysinit.m  test.m  test_temp.m  test_temp_2.m
Matlab/vescular_network/: 1.mat  2.mat  inv_perc.m  inv_perc_wkl.m  strength.txt  ves_network.m
OtherNotes/: Sublime_Note.md  VSCode.md  win10_service.md  开源协议.md  正则.md
OtherNotes/git/: 2021_5_13_Note.md  Git Bash_note.md
OtherNotes/数字音视频/: GOP.md
OtherNotes/计算机原理/: 计算机原理随记.md
Work/: amboot.md  cmd_tftp.c  linux_网络配置及挂载.md  sdk_wkldb_note.md  sdk_过程理解笔记.md  yuv 获取笔记.md
Work/Docker编译环境构建/: Readme.md
Work/I2C 调试记录/files/app_src/wkl_debug/: BUILD.gn
Work/I2C 调试记录/files/app_src/wkl_debug/include/: wkl_debug.h
Work/I2C 调试记录/files/app_src/wkl_debug/src/: main.cpp  wkl_debug.cpp
Work/Nor_Flash 启动记录/: Readme.md
Work/OHOS/: HelloWorld_Note.md
Work/OHOS/拍照功能测试/src/: BUILD.gn
Work/启动流程加速修改/: Readme.md
Work/拍照功能测试/: Readme.md
Work/编译config信息/: json对应记录.md
Work/驱动学习笔记/: Readme.md
Work/鸿蒙内核整理/: Note.md
Work/鸿蒙系统测试/: Readme.md
_OJ/筛法求素数/: _test.c
python/Project_BME_BCI_Blueteeth/: note.txt
python/image_compression/: PCA.py  SVD.py
python/note/: 0赋值、选择、循环.txt  1字符串定义.txt  2字符串操作.txt  3函数定义.txt  4列表.txt  5元组.txt
(+536 files in other folders)
