import ("//build/lite/config/component/lite_component.gni")

HDF_FRAMEWORKS = "//drivers/framework"
KHDF_LITEOS = "//drivers/adapter/khdf/liteos"
LITEOS_TOP_DIR = "//kernel/liteos_a"

lite_component("wkl_debug_comp") {
 features=[":wkl_debug"]
}

executable ("wkl_debug") {
 output_name = "wkl_debug"
 sources = [
   "src/wkl_debug.cpp",
   "src/main.cpp",
 ]
 deps = [
    "//drivers/adapter/uhdf/manager:hdf_manager",
    "//drivers/adapter/uhdf/posix:hdf_posix",

    "//drivers/adapter/uhdf/platform:hdf_platform_driver",
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//third_party/bounds_checking_function:libsec_shared",
 ]
 include_dirs = [
    "include",
    "$LITEOS_TOP_DIR/bsd/compat/linuxkpi/include",
    "$KHDF_LITEOS/osal/include",
    "$HDF_FRAMEWORKS/core/adapter/vnode/include",
    "$HDF_FRAMEWORKS/core/adapter/syscall/include",
    "$HDF_FRAMEWORKS/core/shared/include",
    "$HDF_FRAMEWORKS/core/host/include",
    "$HDF_FRAMEWORKS/core/manager/include",
    "$HDF_FRAMEWORKS/ability/sbuf/include",
    "$HDF_FRAMEWORKS/include/core",
    "$HDF_FRAMEWORKS/include/platform",
    "$HDF_FRAMEWORKS/include/osal",
    "$HDF_FRAMEWORKS/include/utils",
    "$HDF_FRAMEWORKS/utils/include",
    "$HDF_FRAMEWORKS/include/osal",
    "$HDF_FRAMEWORKS/../adapter/uhdf/posix/include",
    "//third_party/bounds_checking_function/include",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
 ]
 defines = [
    "__USER__"
 ]
 cflags = [
    "-Wall",
    "-Wextra",
    "-Werror",
 ]
 ldflags = []
}

